--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("../images/bg-singin.jpg");
+  background-image: url("../images/bg-signup.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed
@@ -25,13 +25,14 @@ body {
   background-color: #ffffff80;
   padding: 30px;
   border-radius: 4%;
-  box-shadow: 3px 3px 1px 0px #00000060
+  box-shadow: 3px 3px 1px 0px #00000060;
+  width: 400px;
 }
 
 h1{
   text-align: center;
   margin-bottom: 20px;
-  color: #272262
+  color: #0d009c
 }
 
 .label-float input{
@@ -39,7 +40,7 @@ h1{
   padding: 5px 5px;
   display: inline-block;
   border: 0;
-  border-bottom: 2px solid #272262;
+  border-bottom: 2px solid #0d009c;
   background-color: transparent;
   outline: none;
   min-width: 180px;
@@ -61,7 +62,7 @@ h1{
 }
 
 .label-float label{
-  color: #272262;
+  color: #0d009c;
   pointer-event: none;
   position: absolute;
   top: 0;
@@ -79,8 +80,8 @@ h1{
 
 button{
   background-color: transparent;
-  border-color: #272262;
-  color: #272262;
+  border-color: #0d009c;
+  color: #0d009c;
   padding: 7px;
   font-weight: bold;
   font-size: 12pt;
@@ -92,7 +93,7 @@ button{
 }
 
 button:hover{
-  background-color: #272262;
+  background-color: #0d009c;
   color: #fff;
 }
 
@@ -101,38 +102,15 @@ button:hover{
   justify-content: center;
 }
 
-hr{
-  margin-top: 10%;
-  margin-bottom: 10%;
-  width: 60%;
-}
-
-p{
-  color: #272262;
-  font-size: 14pt;
-  text-align: center;
-}
-
-a{
-  color: #7a3077;
-  font-weight: bold;
-  text-decoration: none;
-  transition: all .3s ease-out;
-}
-
-a:hover{
-  color: #272262;
-}
-
 .fa-eye{
   position: absolute;
   top: 15px;
   right: 10px;
   cursor: pointer;
-  color: #272262;
+  color: #0d009c;
 }
 
- #msgError{
+#msgError{
   text-align: center;
   color: #ff0000;
   background-color: #ffbbbb;
@@ -140,3 +118,14 @@ a:hover{
   border-radius: 4px;
   display: none;
 }
+
+#msgSuccess{
+  text-align: center;
+  color: #00bb00;
+  background-color: #bbffbe;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
+
